# clipboard-master

./: README.md
ClipboardManagerPro/: appsettings.json
ClipboardManagerPro/src/ClipboardMaster.Core/src/: ffi.rs  lib.rs
ClipboardManagerPro/src/ClipboardMaster.Tray/: TrayIcon.cs
ClipboardManagerPro/src/ClipboardMaster.UI/: App.xaml  App.xaml.cs
ClipboardManagerPro/src/ClipboardMaster.UI/Views/: MainWindow.xaml  MainWindow.xaml.cs
src/ClipboardMaster.Core/: Cargo.toml
src/ClipboardMaster.UI/: ClipboardMaster.UI.csproj
