[package]
name = "clipboard-master-core"
version = "0.1.0"
edition = "2026"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.29", features = ["bundled"] }
image = { version = "0.24", features = ["png", "jpeg"] }
bytes = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
] }